More z-index fixes

--- a/assets/css/scss/base/_body.scss
+++ b/assets/css/scss/base/_body.scss
@@ -93,7 +93,7 @@ div.page-template {
 }
 
 // Unset Z-index that is set in the parent theme.
-div.page-template > * {
-  z-index: unset;
-}
+//div.page-template > * {
+//  z-index: unset;
+//}
 
